[project]
name = "ffiv3d-save-tool"
version = "0.4.0"
description = "Command-line SAVE.BIN editor and checksum fixer for Final Fantasy IV 3D Remake PC saves."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "LGPL-3.0-or-later" }
keywords = ["ffiv", "final-fantasy", "save-editor", "checksum"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies]
tui = ["textual>=8.0.0"]

[project.urls]
UpstreamReference = "https://github.com/KingCyrus20/FFIV-Save-Editor"

[tool.black]
line-length = 100
